$Id: Changelog.txt,v 1.237 2019/04/03 15:57:43 nanard Exp $
miniUPnP client Changelog.

2019/03/10:
  connecthostport.c: Code simplification, error trace fix

2019/01/23:
  set timeout for select() in connecthostport()

2018/10/31:
  miniupnpcmodule.c: check return of WSAStartup()

2018/07/14:
  Fix and improve MSVC project :
    Add Dll configurations
    improve genminiupnpcstrings.vbs

2018/06/18:
  Fixes for windows 64-bits.

VERSION 2.1 : released 2018/05/07

2018/05/07:
  CMake Modernize and cleanup CMakeLists.txt
  Update MS Visual Studio projects

2018/04/30:
  listdevices: show devices sorted by XML desc URL

2018/04/26:
  Small fix in miniupnpcmodule.c (python module)
  Support cross compiling in Makefile.mingw

2018/04/06:
  Use SOCKET type instead of int (for Win64 compilation)
  Increments API_VERSION to 17

2018/02/22:
  Disable usage of MiniSSDPd when using -m option

2017/12/11:
  Fix buffer over run in minixml.c
  Fix uninitialized variable access in upnpreplyparse.c

2017/05/05:
  Fix CVE-2017-8798   Thanks to tin/Team OSTStrom

2016/11/11:
  check strlen before memcmp in XML parsing portlistingparse.c
  fix build under SOLARIS and CYGWIN

2016/10/11:
  Add python 3 compatibility to IGD test

VERSION 2.0 : released 2016/04/19

2016/01/24:
  change miniwget to return HTTP status code
  increments API_VERSION to 16

2016/01/22:
  Improve UPNPIGD_IsConnected() to check if WAN address is not private.
  parse HTTP response status line in miniwget.c

2015/10/26:
  snprintf() overflow check. check overflow in simpleUPnPcommand2()

2015/10/25:
  fix compilation with old macs
  fix compilation with mingw32 (for Appveyor)
  fix python module for python <= 2.3

2015/10/08:
  Change sameport to localport
    see https://github.com/miniupnp/miniupnp/pull/120
  increments API_VERSION to 15

2015/09/15:
  Fix buffer overflow in igd_desc_parse.c/IGDstartelt()
    Discovered by Aleksandar Nikolic of Cisco Talos

2015/08/28: