@@ -1,6 +1,9 @@
 $Id: Changelog.txt,v 1.237 2019/04/03 15:57:43 nanard Exp $
 miniUPnP client Changelog.
 
+2019/04/05:
+  Fix memory leak in upnpreplyparse.c with NewPortListing element
+
 2019/03/10:
   connecthostport.c: Code simplification, error trace fix
 
